Fixup some styling issues on mobile for project pages

--- a/style.desktop.css
+++ b/style.desktop.css
@@ -99,6 +99,50 @@ body {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
+.project-banner {
+  position: relative; 
+  display: flex; 
+  align-items: center; 
+  width: 100%; 
+  height: 150px; 
+  overflow: hidden; 
+  margin-bottom: 10px; 
+  border-radius: 16px;
+}
+
+.project-container {
+  display: flex; 
+  flex-direction: row; 
+  gap: 16px;
+}
+
+.project-info {
+  box-sizing: border-box;
+  padding-left: 5px; padding-right: 5px;
+}
+
+.project-info-slot {
+  display: flex;
+  flex-direction: row;
+}
+
+.project-info-right {
+  text-align: right;  
+}
+
+.project-text {
+  display: flex; 
+  flex-direction: column; 
+  width: 70%;
+}
+
+.project-media {
+  display: flex; 
+  flex-direction: column; 
+  width: 30%;
+  gap: 16px;
+}
+
 h1 {
   line-height: 0;
 }
