--- a/style.mobile.css
+++ b/style.mobile.css
@@ -94,6 +94,54 @@ body {
   overflow-x: hidden;
 }
 
+.project-banner {
+  position: relative; 
+  display: flex; 
+  align-items: center; 
+  width: 100%; 
+  height: 90px; 
+  overflow: hidden; 
+  margin-top: 10px; 
+  margin-bottom: 10px; 
+  border-radius: 16px;
+}
+
+.project-container {
+  display: flex; 
+  flex-direction: column; 
+  gap: 16px;
+}
+
+.project-info {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  padding-left: 5px; padding-right: 5px;
+}
+
+.project-info-slot {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.project-info-right {
+  text-align: left;  
+}
+
+.project-text {
+  display: flex; 
+  flex-direction: column; 
+  width: 100%;
+}
+
+.project-media {
+  display: flex; 
+  flex-direction: column; 
+  width: 100%;
+  gap: 16px;
+}
+
 .title {
   font-size: 17px;
   line-height: 40px;
